Improve paddle movement

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
+    <button id="start">Start game</button>
+    <div id="game-board" class="hidden">
       <canvas id="canvas" width="500" height="600"></canvas>
       <p>Points:<span id="point"></span></p>
       <p>Level: <span id="level"></span></p>
