Add logic when paddle hit ball while moving

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="start">Start game</button>
-    <div id="game-board" class="hidden">
+    <button id="start" class="">Start game</button>
+    <div id="game-board">
       <canvas id="canvas" width="500" height="600"></canvas>
-      <p>Points:<span id="point"></span></p>
-      <p>Level: <span id="level"></span></p>
+      <p>Points: <span id="point">0</span></p>
+      <p>Level: <span id="level">0</span></p>
     </div>
   </body>
 </html>
