--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <body>
     <button id="start" class="">Start game</button>
     <div id="game-board">
-      <canvas id="canvas" width="500" height="600"></canvas>
-      <p>Points: <span id="point">0</span></p>
-      <p>Level: <span id="level">0</span></p>
+      <canvas id="canvas" width="500" height="500"></canvas>
+      <div class="stats">
+        <p>Points: <span id="point">0</span></p>
+        <p>Level: <span id="level">0</span></p>
+      </div>
     </div>
   </body>
 </html>
